- Fixed bug #32591 (ext/mysql: Unsatisfied symbol: ntohs with HP-UX)